# edge-diffusion-tts

./: .gitignore  README.md  colab_training.ipynb  generate_notebook.py  inference_pipeline.py  pyproject.toml  train.py  train_v2.py
edge_diffusion_tts/: __init__.py  cli.py  config.py  generate_sample.py  inference.py  schedule.py  train.py
edge_diffusion_tts/data/: __init__.py  collate.py  dataset.py  dataset_precomputed.py
edge_diffusion_tts/layers/: __init__.py  attention.py  conv.py  embeddings.py  mla.py  transformer.py
edge_diffusion_tts/models/: __init__.py  decoder.py  encoder.py  fsq.py  vq.py
edge_diffusion_tts/training/: __init__.py  consistency.py
edge_diffusion_tts/utils/: __init__.py  audio.py  export.py  speed_utils.py  visualization.py
