[project]
name = "edge-diffusion-tts"
version = "0.1.0"
description = "Edge-optimized Diffusion TTS with progressive distillation for few-step inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "tensorboard>=2.13.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "torchcodec>=0.9.1",
    "soundfile>=0.13.1",
    "noisereduce>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
]
export = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]

[project.scripts]
train-edge-tts = "edge_diffusion_tts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edge_diffusion_tts"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
